--- a/index.html
+++ b/index.html
@@ -452,17 +452,19 @@
                                             自己PRをお願いします。
                                         </div>
                                         <div class="a">
-                                            年表にも書いたとおり、高校卒業後から社会に出るための長い準備期間を取り、今に至ります。
+                                            <p class="orange-text">※履歴書に記載した自己ＰＲとほぼ同文です。</p>
+                                            年表にも書いたとおり、高校卒業後からweb業界で就職するための長い準備期間を取り、今に至ります。
                                             <br>
                                             僕の強みはその準備期間で獲得できた自走力です。
                                             自分で考え、自分で行動し、内省し続けることを余儀なくされたこの期間は孤独、自分との戦いでしたが、僕にとってなくてはならない時間だったと確信しています。
                                             <br>
                                             <br class="about-br">
-                                            中途採用である分、即戦力であることが求められ、仕事のサポートを十分にしていただけないことは理解しております。
+                                            中途採用である分、即戦力であることが求められ、仕事のサポートを十分にして頂けない可能性があることは覚悟しております。
                                             <br>
-                                            会社や誰かに頼ることなく、自分で成長し、自分で仕事を覚えていかなくてはならない状況に、僕が獲得した自走力は適しているのではないかと考えます。
+                                            未経験だからといって会社や誰かに頼ることなく、自分で成長し、自分で仕事を覚えていかなくてはならない状況に、僕が獲得した自走力は適していると考えます。
                                             <br>
                                             示せるものは素人に毛の生えた程度の作品群と拙い文章だけですが、入社した暁には自力で成長し続けることをお約束します。
+
 
                                         </div>
                                     </div>
@@ -736,7 +738,6 @@
 
 
         });
-
     </script>
 
 
@@ -749,6 +750,4 @@
     <script type='text/javascript' src="js/photoswipe/photoswipe-setup.js"></script>
     <script type='text/javascript' src="js/lazysizes/lazysizes.min.js"></script>
     <script type='text/javascript' src="js/script.js"></script>
-</body>
-
-</html>
+</body></html>
