--- a/index.html
+++ b/index.html
@@ -405,7 +405,7 @@
                                     <div class="qanda">
                                         <div class="q">
                                             <i class="fas fa-question-circle"></i>
-                                            なぜ大学受験を途中でやめたの？
+                                            なんで大学受験を途中でやめたの？
 
                                         </div>
                                         <div class="a">
@@ -418,14 +418,13 @@
                                     <div class="qanda">
                                         <div class="q">
                                             <i class="fas fa-question-circle"></i>
-                                            なぜウェブデザイナーになろうと思ったの？
+                                            なんでウェブデザイナーになろうと思ったの？
                                         </div>
                                         <div class="a">
                                             前述したとおり、当初はウェブディレクターを目指してオンラインスクールを利用したり独自に勉強を進めていました。
                                             <br>
                                             ですが自分の弱点である容姿の悪さ、体力の無さがコミュニケーションが多くてハードな職業であるウェブディレクターに向いていないと考え、方針を転換してデザイナーになりたいと思うようになりました。
-                                            <br>
-                                            ウェブディレクターになるためにHtml/CSSの勉強を事前にしていたことも理由の一つです。
+
 
                                         </div>
                                     </div>
@@ -475,8 +474,8 @@
                                             なんでレンタルサーバーを使ってないの？
                                         </div>
                                         <div class="a">
-                                            僕の実力不足が原因で何度やってもFTPソフト（FileZillaなど）を使ってレンタルサーバーにファイルをうまくアップロードできなかったからです。
-                                            <br>悠長にしている時間もなかったので、代替としてGitHubを使いました。すみません。
+                                            今回はGitHubを利用してサイトを公開したのですが、ファイルのアップロード、更新がサーバーより簡単で無償利用できるからです。
+                                            <br>コードの書き方、技術のレベルを提示しやすいのもGitHubを選んだ理由の一つです。
 
                                         </div>
                                     </div>
