--- a/index.html
+++ b/index.html
@@ -233,9 +233,22 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/origin-sam.png" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">コーディング練習</div>
+                                    <div class="works-title">レイアウト（HTML/CSS）</div>
 
                                     <div class="works-url"><a class="works-url-link" href="https://hiroyuki-third-door.github.io/practice-site-layout/" target="_blank">リンクはこちら</a>
+                                    </div>
+                                </figcaption>
+                            </figure>
+
+
+                            <figure class="works-item">
+                                <a href="img/works/javascript.png" data-size="2446x1196" class="works-image-wrapper works-link hover-action">
+                                    <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/javascript.png" alt="" />
+                                </a>
+                                <figcaption class="works-body">
+                                    <div class="works-title">クイズ（JavaScript）</div>
+
+                                    <div class="works-url"><a class="works-url-link" href="https://hiroyuki-third-door.github.io/javascript-quiz/" target="_blank">リンクはこちら</a>
                                     </div>
                                 </figcaption>
                             </figure>
@@ -540,7 +553,7 @@
                                         <img class="skill-image" src="img/works/js-2.png" alt="">
                                     </div>
                                     <div class="skill-body">
-                                        <h3 class="skill-title">jQuery</h3>
+                                        <h3 class="skill-title">JavaScript</h3>
                                         <div class="skill-rating rating">
                                             <div class="rate-11 rate3-11"></div>
                                         </div>
@@ -737,6 +750,7 @@
 
 
         });
+
     </script>
 
 
@@ -749,4 +763,6 @@
     <script type='text/javascript' src="js/photoswipe/photoswipe-setup.js"></script>
     <script type='text/javascript' src="js/lazysizes/lazysizes.min.js"></script>
     <script type='text/javascript' src="js/script.js"></script>
-</body></html>
+</body>
+
+</html>
