--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
                                             <div class="rate-11 rate3-11"></div>
                                         </div>
                                         <p>
-                                            基本のキの字もわかっていない状態です。初歩的な仕組みを部分的に実装することはできますが、複雑なものは……。勉強中です。</p>
+                                            基本のキの字もわかっていない状態です。jQeryなどを使って初歩的な仕組みを実装することはできますが、複雑なものは……。勉強中です。</p>
                                     </div>
                                 </div>
                                 <div class="skill-item">
