--- a/index.html
+++ b/index.html
@@ -144,6 +144,16 @@
                             </figure>
 
                             <figure class="works-item">
+                                <a href="img/works/font-all.jpg" data-size="640x958" class="works-image-wrapper works-link hover-action">
+                                    <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/FONT-SAM.png" alt="" />
+                                </a>
+                                <figcaption class="works-body">
+                                    <div class="works-title">色々なTOMITA（フォント練習）</div>
+
+                                </figcaption>
+                            </figure>
+
+                            <figure class="works-item">
                                 <a href="img/works/kantou.png" data-size="1280x6000" class="works-image-wrapper works-link hover-action">
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/kantou-sam.jpg" alt="" />
                                 </a>
@@ -404,7 +414,7 @@
                                             特技：議論、討論、説得。文章執筆。
                                             <br>
                                             <br class="about-br">
-                                            短所：不細工。フードアレルギー持ち。お酒飲まない。飽き性。器用貧乏。
+                                            短所：不細工。胃腸が弱い。お酒飲まない。飽き性。器用貧乏。
                                             <br>
                                             <br class="about-br">
                                             資格：普通自動車免許（ペーパードライバー）。
@@ -750,7 +760,6 @@
 
 
         });
-
     </script>
 
 
@@ -763,6 +772,4 @@
     <script type='text/javascript' src="js/photoswipe/photoswipe-setup.js"></script>
     <script type='text/javascript' src="js/lazysizes/lazysizes.min.js"></script>
     <script type='text/javascript' src="js/script.js"></script>
-</body>
-
-</html>
+</body></html>
