--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/banner%201-2.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">バナー広告</div>
+                                    <div class="works-title">広告</div>
 
                                 </figcaption>
                             </figure>
@@ -109,7 +109,7 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/banner%202.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">バナー広告</div>
+                                    <div class="works-title">広告</div>
 
                                 </figcaption>
                             </figure>
@@ -118,7 +118,7 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/banner%203-f.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">バナー広告</div>
+                                    <div class="works-title">メニュー</div>
 
                                 </figcaption>
                             </figure>
@@ -128,10 +128,22 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/banner%204.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">バナー広告</div>
+                                    <div class="works-title">広告</div>
 
                                 </figcaption>
                             </figure>
+
+                            <figure class="works-item">
+                                <a href="img/works/game_creater.jpg" data-size="854x479" class="works-image-wrapper works-link hover-action">
+                                    <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/game_creater.jpg" alt="" />
+                                </a>
+                                <figcaption class="works-body">
+                                    <div class="works-title">講演会広告</div>
+
+                                </figcaption>
+                            </figure>
+
+
 
                             <figure class="works-item">
                                 <a href="img/works/maz.jpg" data-size="640x958" class="works-image-wrapper works-link hover-action">
@@ -411,13 +423,14 @@
                                             趣味：本を読むこと。huluとNetflixを見ること。
                                             <br>
                                             <br class="about-br">
-                                            特技：議論、討論、説得。文章執筆。
+                                            特技：議論、討論、説得など。文章執筆。
                                             <br>
                                             <br class="about-br">
-                                            短所：不細工。胃腸が弱い。お酒飲まない。飽き性。器用貧乏。
+                                            短所：肌が荒れやすい。お酒飲まない。飽き性。器用貧乏。
                                             <br>
                                             <br class="about-br">
                                             資格：普通自動車免許（ペーパードライバー）。
+
                                             <br>
                                             <br class="about-br">
                                             座右の銘：起きて半畳寝て一畳（足るを知る、と同義）。
