--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/portfolio-2.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">ポートフォリオサイト</div>
+                                    <div class="works-title">ポートフォリオサイト（RWD）</div>
 
                                     <!--
                                     <div class="works-url"><a class="works-url-link" href="https://yahoo.co.jp" target="_blank">Link</a>
@@ -681,27 +681,22 @@
 
     </div>
 
-    <!-- 下記はPhotoswipeプラグイン用 -->
-    <!-- Root element of PhotoSwipe. Must have class pswp. -->
     <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 
-        <!-- Background of PhotoSwipe.
-       It's a separate element as animating opacity is faster than rgba(). -->
+
         <div class="pswp__bg"></div>
 
-        <!-- Slides wrapper with overflow:hidden. -->
+
         <div class="pswp__scroll-wrap">
 
-            <!-- Container that holds slides.
-          PhotoSwipe keeps only 3 of them in the DOM to save memory.
-          Don't modify these 3 pswp__item elements, data is added later on. -->
+
             <div class="pswp__container">
                 <div class="pswp__item"></div>
                 <div class="pswp__item"></div>
                 <div class="pswp__item"></div>
             </div>
 
-            <!-- Default (PhotoSwipeUI_Default) interface on top of sliding area. Can be changed. -->
+
             <div class="pswp__ui pswp__ui--hidden">
 
                 <div class="pswp__top-bar">
@@ -718,8 +713,7 @@
 
                     <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
 
-                    <!-- Preloader demo https://codepen.io/dimsemenov/pen/yyBWoR -->
-                    <!-- element will get class pswp__preloader--active when preloader is running -->
+
                     <div class="pswp__preloader">
                         <div class="pswp__preloader__icn">
                             <div class="pswp__preloader__cut">
