--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/banner%201-2.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">広告</div>
+                                    <div class="works-title">架空広告</div>
 
                                 </figcaption>
                             </figure>
@@ -109,7 +109,7 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/banner%202.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">広告</div>
+                                    <div class="works-title">架空広告</div>
 
                                 </figcaption>
                             </figure>
@@ -118,7 +118,7 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/banner%203-f.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">メニュー</div>
+                                    <div class="works-title">架空メニュー</div>
 
                                 </figcaption>
                             </figure>
@@ -128,7 +128,7 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/banner%204.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">広告</div>
+                                    <div class="works-title">架空広告</div>
 
                                 </figcaption>
                             </figure>
@@ -138,7 +138,7 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/game_creater.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">講演会広告</div>
+                                    <div class="works-title">架空広告</div>
 
                                 </figcaption>
                             </figure>
@@ -767,6 +767,7 @@
 
 
         });
+
     </script>
 
 
@@ -779,4 +780,6 @@
     <script type='text/javascript' src="js/photoswipe/photoswipe-setup.js"></script>
     <script type='text/javascript' src="js/lazysizes/lazysizes.min.js"></script>
     <script type='text/javascript' src="js/script.js"></script>
-</body></html>
+</body>
+
+</html>
