--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/bootstrap-sam.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
-                                    <div class="works-title">架空サイト（Bootstrap）</div>
+                                    <div class="works-title">レイアウト練習（Bootstrap）</div>
 
                                     <div class="works-url"><a class="works-url-link" href="https://hiroyuki-third-door.github.io/bootstrap-practice/" target="_blank">リンクはこちら</a>
                                     </div>
