--- a/index.html
+++ b/index.html
@@ -432,13 +432,13 @@
                                             <br>2001年生まれ。就活中のウェブデザイナー志望。
                                             <br>
                                             <br class="about-br">
-                                            趣味：本を読むこと。huluとNetflixを見ること。
+                                            趣味：本を読むこと。Netflixを見ること。
                                             <br>
                                             <br class="about-br">
                                             特技：議論、討論、説得など。文章執筆。
                                             <br>
                                             <br class="about-br">
-                                            短所：肌が荒れやすい。お酒飲まない。飽き性。器用貧乏。
+                                            短所：胃腸が弱い。飽き性。器用貧乏。
                                             <br>
                                             <br class="about-br">
                                             資格：普通自動車免許（ペーパードライバー）。
@@ -471,9 +471,7 @@
                                         <div class="a">
                                             前述したとおり、当初はウェブディレクターを目指してオンラインスクールを利用したり独自に勉強を進めていました。
                                             <br>
-                                            ですが自分の弱点である容姿の悪さ、体力の無さがコミュニケーションが多くてハードな職業であるウェブディレクターに向いていないと考え、方針を転換してデザイナーになりたいと思うようになりました。
-
-
+                                            ですが要件定義、スケジューリング、予算管理、指示出しなど、ウェブ制作現場のフローを熟知していなければとても成り立たない職業であることに気づき、方針を転換してデザイナーになりたいと思うようになりました。
                                         </div>
                                     </div>
 
@@ -500,7 +498,7 @@
                                         </div>
                                         <div class="a">
                                             <p class="orange-text">※履歴書に記載した自己ＰＲとほぼ同文です。</p>
-                                            年表にも書いたとおり、高校卒業後からweb業界で就職するための長い準備期間を取り、今に至ります。
+                                            年表にも書いたとおり、高校卒業後からウェブ業界で就職するための長い準備期間を取り、今に至ります。
                                             <br>
                                             僕の強みはその準備期間で獲得できた自走力です。
                                             自分で考え、自分で行動し、内省し続けることを余儀なくされたこの期間は孤独、自分との戦いでしたが、僕にとってなくてはならない時間だったと確信しています。
@@ -528,19 +526,6 @@
                                         </div>
                                     </div>
 
-
-                                    <div class="qanda">
-                                        <div class="q">
-                                            <i class="fas fa-question-circle"></i>
-                                            ウェブデザイナーになれなかったらどうする？
-                                        </div>
-                                        <div class="a">
-                                            ウェブディレクター志望として就職活動をします。
-                                            <br>自分なんかに務まるかは全く自信がありませんが、ディレクターとしてのキャリアももちろん想定に入れています。
-                                            <br>需要と供給の観点からみてもデザイナーよりもディレクターの方が求められているのは承知しているので……。
-
-                                        </div>
-                                    </div>
 
 
 
@@ -607,7 +592,7 @@
                                             <div class="rate rate3"></div>
                                         </div>
                                         <p>
-                                            今は存在しませんが、現ポートフォリオサイトの前身をWordPressで運営していたので、基本的な操作は理解しています。テンプレートを自分用にカスタマイズしながら使っていました。</p>
+                                            今は存在しませんが、現ポートフォリオサイトの前身をWordPressで運営していたので、基本的な操作は理解しています。PHPを使ったプラグイン開発などは一切できません。</p>
                                     </div>
 
                                 </div>
@@ -616,12 +601,26 @@
                                         <img class="skill-image" src="img/works/ph-2.png" alt="">
                                     </div>
                                     <div class="skill-body">
-                                        <h3 class="skill-title">Potoshop</h3>
+                                        <h3 class="skill-title">Photoshop</h3>
                                         <div class="skill-rating rating">
                                             <div class="rate rate3"></div>
                                         </div>
                                         <p>
                                             単純なものであれば、バナー、デザインカンプともに作成可能です。基本的な操作は理解している状態です。</p>
+                                    </div>
+                                </div>
+
+                                <div class="skill-item">
+                                    <div class="skill-image-wrapper">
+                                        <img class="skill-image" src="img/works/ai.png" alt="">
+                                    </div>
+                                    <div class="skill-body">
+                                        <h3 class="skill-title">Illustrator</h3>
+                                        <div class="skill-rating rating">
+                                            <div class="rate-11 rate3-11"></div>
+                                        </div>
+                                        <p>
+                                            勉強中です。PhotoshopとUI似てるしすぐ覚えられるかな、と思っていたのですが、自分が間違っていました。とても同じAdobe製品と思えないくらいに操作感が違うので、大苦戦しています。</p>
                                     </div>
                                 </div>
 
