--- a/index.html
+++ b/index.html
@@ -642,9 +642,12 @@
                     </div>
                     <div class="section-contact">
                         <p>
-                            お問い合わせは、<br class="sp-only">TwitterのDMでお願いいたします。
+                            お問い合わせは、<br class="sp-only">メール、TwitterのDMでお願いいたします。
                         </p>
+                        <p>hiroyukitomita0107@gmail.com</p>
                     </div>
+
+
                     <div class="section-body contact">
 
 
@@ -778,7 +781,6 @@
 
 
         });
-
     </script>
 
 
@@ -791,6 +793,4 @@
     <script type='text/javascript' src="js/photoswipe/photoswipe-setup.js"></script>
     <script type='text/javascript' src="js/lazysizes/lazysizes.min.js"></script>
     <script type='text/javascript' src="js/script.js"></script>
-</body>
-
-</html>
+</body></html>
