--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
                             </figure>
 
                             <figure class="works-item">
-                                <a href="img/works/portfolio-2.jpg" data-size="1680x971" class="works-image-wrapper works-link hover-action">
+                                <a href="img/works/portfolio-2.jpg" data-size="2796x1804" class="works-image-wrapper works-link hover-action">
                                     <img class="works-image lazyload fadein" src="img/placeholder4x3.png" data-src="img/works/portfolio-2.jpg" alt="" />
                                 </a>
                                 <figcaption class="works-body">
@@ -781,6 +781,7 @@
 
 
         });
+
     </script>
 
 
@@ -793,4 +794,6 @@
     <script type='text/javascript' src="js/photoswipe/photoswipe-setup.js"></script>
     <script type='text/javascript' src="js/lazysizes/lazysizes.min.js"></script>
     <script type='text/javascript' src="js/script.js"></script>
-</body></html>
+</body>
+
+</html>
